Fix sidebar image caption wordwrap

--- a/chicubs.scss
+++ b/chicubs.scss
@@ -229,10 +229,11 @@ body {
                         background-size: cover;
                         &:after {
                             background-color: rgba(0,0,0,0.5);
-                            display: block;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
                             width: 100%;
                             height: 40px;
-                            line-height: 40px;
                             margin-top: -40px;
                             font-size: 12px;
                             font-weight: 500;
